// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeroMainScreen openContactPopup & contactConfirmed 1`] = `
Object {
  "contactPopupVisible": true,
  "name": "Hanna Morgan",
}
`;

exports[`HeroMainScreen openContactPopup & contactConfirmed 2`] = `
Object {
  "contactPopupVisible": false,
  "name": "Hanna Morgan",
}
`;

exports[`HeroMainScreen renders correctly 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <ScrollViewMock
    style={
        Object {
            "backgroundColor": "#fff",
            "flex": 1,
          }
    }
>
    <View
        style={
            Object {
                "backgroundColor": "#fff",
                "flex": 1,
              }
        }
    >
        <View
            style={
                Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "height": 176,
                    "justifyContent": "center",
                    "marginBottom": 16,
                    "marginTop": 0,
                  }
            }
        >
            <View
                style={
                    Object {
                        "alignItems": "center",
                        "borderColor": "#cccccc",
                        "borderRadius": 66,
                        "borderWidth": 5,
                        "flexDirection": "row",
                        "height": 132,
                        "justifyContent": "center",
                        "width": 132,
                      }
                }
            >
                <Image
                    source={1}
                    style={
                        Object {
                            "borderRadius": 56,
                            "height": 112,
                            "width": 112,
                          }
                    }
                />
            </View>
            <Image
                source={1}
                style={
                    Object {
                        "height": 112,
                        "left": "50%",
                        "position": "absolute",
                        "top": "50%",
                        "transform": Array [
                          Object {
                            "translate": Array [
                              0,
                              -112,
                            ],
                          },
                          Object {
                            "scale": 1,
                          },
                        ],
                        "width": 112,
                      }
                }
            />
            <Image
                source={1}
                style={
                    Object {
                        "height": 112,
                        "left": "50%",
                        "position": "absolute",
                        "top": "50%",
                        "transform": Array [
                          Object {
                            "translate": Array [
                              -56,
                              -56,
                            ],
                          },
                          Object {
                            "scale": 1.4,
                          },
                        ],
                        "width": 112,
                      }
                }
            />
        </View>
        <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
                Object {
                    "color": "#000000",
                    "fontSize": 20,
                    "marginBottom": 9.696,
                    "textAlign": "center",
                  }
            }
        >
            Hanna Morgan
        </Text>
        <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
                Object {
                    "color": "#000000",
                    "fontSize": 13.296,
                    "marginBottom": 24,
                    "textAlign": "center",
                  }
            }
        >
            View Profile
        </Text>
        <Connect(ProfileSwitch) />
        <View
            style={
                Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                    "marginLeft": 28,
                    "marginRight": 28,
                    "marginTop": 31.04,
                  }
            }
        >
            <Connect(Status)
                description="213"
                image={1}
                style={undefined}
                title="Races"
            />
            <Connect(Status)
                description="438km"
                image={1}
                style={undefined}
                title="Distance"
            />
            <Connect(Status)
                description="$3123.00"
                image={1}
                style={undefined}
                title="Earned"
            />
        </View>
        <View
            style={
                Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                    "marginBottom": 16,
                    "marginLeft": 56,
                    "marginRight": 56,
                    "marginTop": 20,
                  }
            }
        >
            <View>
                <Connect(MainItem)
                    image={1}
                    title="Manage Inventory"
                />
                <Connect(MainItem)
                    image={1}
                    onPress={[Function]}
                    title="Contact Us"
                />
            </View>
            <View>
                <Connect(MainItem)
                    image={1}
                    title="History"
                />
                <Connect(MainItem)
                    image={1}
                    title="Payment Info"
                />
            </View>
        </View>
    </View>
    <Connect(CustomerServicePopup)
        closeModal={[Function]}
        openModal={false}
    />
</ScrollViewMock>,
  "nodes": Array [
    <ScrollViewMock
      style={
            Object {
                  "backgroundColor": "#fff",
                  "flex": 1,
                }
      }
>
      <View
            style={
                  Object {
                        "backgroundColor": "#fff",
                        "flex": 1,
                      }
            }
      >
            <View
                  style={
                        Object {
                              "alignItems": "center",
                              "flexDirection": "row",
                              "height": 176,
                              "justifyContent": "center",
                              "marginBottom": 16,
                              "marginTop": 0,
                            }
                  }
            >
                  <View
                        style={
                              Object {
                                    "alignItems": "center",
                                    "borderColor": "#cccccc",
                                    "borderRadius": 66,
                                    "borderWidth": 5,
                                    "flexDirection": "row",
                                    "height": 132,
                                    "justifyContent": "center",
                                    "width": 132,
                                  }
                        }
                  >
                        <Image
                              source={1}
                              style={
                                    Object {
                                          "borderRadius": 56,
                                          "height": 112,
                                          "width": 112,
                                        }
                              }
                        />
                  </View>
                  <Image
                        source={1}
                        style={
                              Object {
                                    "height": 112,
                                    "left": "50%",
                                    "position": "absolute",
                                    "top": "50%",
                                    "transform": Array [
                                      Object {
                                        "translate": Array [
                                          0,
                                          -112,
                                        ],
                                      },
                                      Object {
                                        "scale": 1,
                                      },
                                    ],
                                    "width": 112,
                                  }
                        }
                  />
                  <Image
                        source={1}
                        style={
                              Object {
                                    "height": 112,
                                    "left": "50%",
                                    "position": "absolute",
                                    "top": "50%",
                                    "transform": Array [
                                      Object {
                                        "translate": Array [
                                          -56,
                                          -56,
                                        ],
                                      },
                                      Object {
                                        "scale": 1.4,
                                      },
                                    ],
                                    "width": 112,
                                  }
                        }
                  />
            </View>
            <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                        Object {
                              "color": "#000000",
                              "fontSize": 20,
                              "marginBottom": 9.696,
                              "textAlign": "center",
                            }
                  }
            >
                  Hanna Morgan
            </Text>
            <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                        Object {
                              "color": "#000000",
                              "fontSize": 13.296,
                              "marginBottom": 24,
                              "textAlign": "center",
                            }
                  }
            >
                  View Profile
            </Text>
            <Connect(ProfileSwitch) />
            <View
                  style={
                        Object {
                              "alignItems": "center",
                              "flexDirection": "row",
                              "justifyContent": "space-between",
                              "marginLeft": 28,
                              "marginRight": 28,
                              "marginTop": 31.04,
                            }
                  }
            >
                  <Connect(Status)
                        description="213"
                        image={1}
                        style={undefined}
                        title="Races"
                  />
                  <Connect(Status)
                        description="438km"
                        image={1}
                        style={undefined}
                        title="Distance"
                  />
                  <Connect(Status)
                        description="$3123.00"
                        image={1}
                        style={undefined}
                        title="Earned"
                  />
            </View>
            <View
                  style={
                        Object {
                              "alignItems": "center",
                              "flexDirection": "row",
                              "justifyContent": "space-between",
                              "marginBottom": 16,
                              "marginLeft": 56,
                              "marginRight": 56,
                              "marginTop": 20,
                            }
                  }
            >
                  <View>
                        <Connect(MainItem)
                              image={1}
                              title="Manage Inventory"
                        />
                        <Connect(MainItem)
                              image={1}
                              onPress={[Function]}
                              title="Contact Us"
                        />
                  </View>
                  <View>
                        <Connect(MainItem)
                              image={1}
                              title="History"
                        />
                        <Connect(MainItem)
                              image={1}
                              title="Payment Info"
                        />
                  </View>
            </View>
      </View>
      <Connect(CustomerServicePopup)
            closeModal={[Function]}
            openModal={false}
      />
</ScrollViewMock>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 0,
      "_context": Object {},
      "_currentElement": <HeroMainScreen
        header={Object {}}
/>,
      "_debugID": 1,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": HeroMainScreen {
        "_reactInternalInstance": [Circular],
        "contactConfirmed": [Function],
        "context": Object {},
        "openContactPopup": [Function],
        "props": Object {
          "header": Object {},
        },
        "refs": Object {},
        "state": Object {
          "contactPopupVisible": false,
          "name": "Hanna Morgan",
        },
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 1,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <ScrollViewMock
          style={
                    Object {
                              "backgroundColor": "#fff",
                              "flex": 1,
                            }
          }
>
          <View
                    style={
                              Object {
                                        "backgroundColor": "#fff",
                                        "flex": 1,
                                      }
                    }
          >
                    <View
                              style={
                                        Object {
                                                  "alignItems": "center",
                                                  "flexDirection": "row",
                                                  "height": 176,
                                                  "justifyContent": "center",
                                                  "marginBottom": 16,
                                                  "marginTop": 0,
                                                }
                              }
                    >
                              <View
                                        style={
                                                  Object {
                                                            "alignItems": "center",
                                                            "borderColor": "#cccccc",
                                                            "borderRadius": 66,
                                                            "borderWidth": 5,
                                                            "flexDirection": "row",
                                                            "height": 132,
                                                            "justifyContent": "center",
                                                            "width": 132,
                                                          }
                                        }
                              >
                                        <Image
                                                  source={1}
                                                  style={
                                                            Object {
                                                                      "borderRadius": 56,
                                                                      "height": 112,
                                                                      "width": 112,
                                                                    }
                                                  }
                                        />
                              </View>
                              <Image
                                        source={1}
                                        style={
                                                  Object {
                                                            "height": 112,
                                                            "left": "50%",
                                                            "position": "absolute",
                                                            "top": "50%",
                                                            "transform": Array [
                                                              Object {
                                                                "translate": Array [
                                                                  0,
                                                                  -112,
                                                                ],
                                                              },
                                                              Object {
                                                                "scale": 1,
                                                              },
                                                            ],
                                                            "width": 112,
                                                          }
                                        }
                              />
                              <Image
                                        source={1}
                                        style={
                                                  Object {
                                                            "height": 112,
                                                            "left": "50%",
                                                            "position": "absolute",
                                                            "top": "50%",
                                                            "transform": Array [
                                                              Object {
                                                                "translate": Array [
                                                                  -56,
                                                                  -56,
                                                                ],
                                                              },
                                                              Object {
                                                                "scale": 1.4,
                                                              },
                                                            ],
                                                            "width": 112,
                                                          }
                                        }
                              />
                    </View>
                    <Text
                              accessible={true}
                              allowFontScaling={true}
                              ellipsizeMode="tail"
                              style={
                                        Object {
                                                  "color": "#000000",
                                                  "fontSize": 20,
                                                  "marginBottom": 9.696,
                                                  "textAlign": "center",
                                                }
                              }
                    >
                              Hanna Morgan
                    </Text>
                    <Text
                              accessible={true}
                              allowFontScaling={true}
                              ellipsizeMode="tail"
                              style={
                                        Object {
                                                  "color": "#000000",
                                                  "fontSize": 13.296,
                                                  "marginBottom": 24,
                                                  "textAlign": "center",
                                                }
                              }
                    >
                              View Profile
                    </Text>
                    <Connect(ProfileSwitch) />
                    <View
                              style={
                                        Object {
                                                  "alignItems": "center",
                                                  "flexDirection": "row",
                                                  "justifyContent": "space-between",
                                                  "marginLeft": 28,
                                                  "marginRight": 28,
                                                  "marginTop": 31.04,
                                                }
                              }
                    >
                              <Connect(Status)
                                        description="213"
                                        image={1}
                                        style={undefined}
                                        title="Races"
                              />
                              <Connect(Status)
                                        description="438km"
                                        image={1}
                                        style={undefined}
                                        title="Distance"
                              />
                              <Connect(Status)
                                        description="$3123.00"
                                        image={1}
                                        style={undefined}
                                        title="Earned"
                              />
                    </View>
                    <View
                              style={
                                        Object {
                                                  "alignItems": "center",
                                                  "flexDirection": "row",
                                                  "justifyContent": "space-between",
                                                  "marginBottom": 16,
                                                  "marginLeft": 56,
                                                  "marginRight": 56,
                                                  "marginTop": 20,
                                                }
                              }
                    >
                              <View>
                                        <Connect(MainItem)
                                                  image={1}
                                                  title="Manage Inventory"
                                        />
                                        <Connect(MainItem)
                                                  image={1}
                                                  onPress={[Function]}
                                                  title="Contact Us"
                                        />
                              </View>
                              <View>
                                        <Connect(MainItem)
                                                  image={1}
                                                  title="History"
                                        />
                                        <Connect(MainItem)
                                                  image={1}
                                                  title="Payment Info"
                                        />
                              </View>
                    </View>
          </View>
          <Connect(CustomerServicePopup)
                    closeModal={[Function]}
                    openModal={false}
          />
</ScrollViewMock>,
        "_debugID": 2,
        "_renderedOutput": <ScrollViewMock
          style={
                    Object {
                              "backgroundColor": "#fff",
                              "flex": 1,
                            }
          }
>
          <View
                    style={
                              Object {
                                        "backgroundColor": "#fff",
                                        "flex": 1,
                                      }
                    }
          >
                    <View
                              style={
                                        Object {
                                                  "alignItems": "center",
                                                  "flexDirection": "row",
                                                  "height": 176,
                                                  "justifyContent": "center",
                                                  "marginBottom": 16,
                                                  "marginTop": 0,
                                                }
                              }
                    >
                              <View
                                        style={
                                                  Object {
                                                            "alignItems": "center",
                                                            "borderColor": "#cccccc",
                                                            "borderRadius": 66,
                                                            "borderWidth": 5,
                                                            "flexDirection": "row",
                                                            "height": 132,
                                                            "justifyContent": "center",
                                                            "width": 132,
                                                          }
                                        }
                              >
                                        <Image
                                                  source={1}
                                                  style={
                                                            Object {
                                                                      "borderRadius": 56,
                                                                      "height": 112,
                                                                      "width": 112,
                                                                    }
                                                  }
                                        />
                              </View>
                              <Image
                                        source={1}
                                        style={
                                                  Object {
                                                            "height": 112,
                                                            "left": "50%",
                                                            "position": "absolute",
                                                            "top": "50%",
                                                            "transform": Array [
                                                              Object {
                                                                "translate": Array [
                                                                  0,
                                                                  -112,
                                                                ],
                                                              },
                                                              Object {
                                                                "scale": 1,
                                                              },
                                                            ],
                                                            "width": 112,
                                                          }
                                        }
                              />
                              <Image
                                        source={1}
                                        style={
                                                  Object {
                                                            "height": 112,
                                                            "left": "50%",
                                                            "position": "absolute",
                                                            "top": "50%",
                                                            "transform": Array [
                                                              Object {
                                                                "translate": Array [
                                                                  -56,
                                                                  -56,
                                                                ],
                                                              },
                                                              Object {
                                                                "scale": 1.4,
                                                              },
                                                            ],
                                                            "width": 112,
                                                          }
                                        }
                              />
                    </View>
                    <Text
                              accessible={true}
                              allowFontScaling={true}
                              ellipsizeMode="tail"
                              style={
                                        Object {
                                                  "color": "#000000",
                                                  "fontSize": 20,
                                                  "marginBottom": 9.696,
                                                  "textAlign": "center",
                                                }
                              }
                    >
                              Hanna Morgan
                    </Text>
                    <Text
                              accessible={true}
                              allowFontScaling={true}
                              ellipsizeMode="tail"
                              style={
                                        Object {
                                                  "color": "#000000",
                                                  "fontSize": 13.296,
                                                  "marginBottom": 24,
                                                  "textAlign": "center",
                                                }
                              }
                    >
                              View Profile
                    </Text>
                    <Connect(ProfileSwitch) />
                    <View
                              style={
                                        Object {
                                                  "alignItems": "center",
                                                  "flexDirection": "row",
                                                  "justifyContent": "space-between",
                                                  "marginLeft": 28,
                                                  "marginRight": 28,
                                                  "marginTop": 31.04,
                                                }
                              }
                    >
                              <Connect(Status)
                                        description="213"
                                        image={1}
                                        style={undefined}
                                        title="Races"
                              />
                              <Connect(Status)
                                        description="438km"
                                        image={1}
                                        style={undefined}
                                        title="Distance"
                              />
                              <Connect(Status)
                                        description="$3123.00"
                                        image={1}
                                        style={undefined}
                                        title="Earned"
                              />
                    </View>
                    <View
                              style={
                                        Object {
                                                  "alignItems": "center",
                                                  "flexDirection": "row",
                                                  "justifyContent": "space-between",
                                                  "marginBottom": 16,
                                                  "marginLeft": 56,
                                                  "marginRight": 56,
                                                  "marginTop": 20,
                                                }
                              }
                    >
                              <View>
                                        <Connect(MainItem)
                                                  image={1}
                                                  title="Manage Inventory"
                                        />
                                        <Connect(MainItem)
                                                  image={1}
                                                  onPress={[Function]}
                                                  title="Contact Us"
                                        />
                              </View>
                              <View>
                                        <Connect(MainItem)
                                                  image={1}
                                                  title="History"
                                        />
                                        <Connect(MainItem)
                                                  image={1}
                                                  title="Payment Info"
                                        />
                              </View>
                    </View>
          </View>
          <Connect(CustomerServicePopup)
                    closeModal={[Function]}
                    openModal={false}
          />
</ScrollViewMock>,
      },
      "_renderedNodeType": 1,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <HeroMainScreen
    header={Object {}}
/>,
}
`;
